--- a/Dev/index.html
+++ b/Dev/index.html
@@ -14,15 +14,26 @@
         integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r"
         crossorigin="anonymous">
 
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/styles.css">
+
   <title>Hourglass</title>
 </head>
 <body>
+
+  <!-- 
+  <H1 id="h1">Hello World</H1>
+  -->
+
+  
+
   <!-- Bootstrap Setups -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
   integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
   crossorigin="anonymous"></script>
-  <H1>Hello World</H1>
+
+  <!-- Own JS -->
+  <script src="js/script.js"></script>
 </body>
 </html>
-
