--- a/Dev/index.html
+++ b/Dev/index.html
@@ -24,9 +24,8 @@
   <!-- 
   <H1 id="h1">Hello World</H1>
   -->
-
-  
-
+  <div class="navbarBackground"></div>
+  <div class="topImg"></div>
   <!-- Bootstrap Setups -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
