Add Hourglass Logo
+ hourglass icon "Hourglass@2x.png"
+ hourglass logo text

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -21,11 +21,21 @@
 </head>
 <body>
 
+
   <!-- 
   <H1 id="h1">Hello World</H1>
   -->
-  <div class="navbarBackground"></div>
+  <div class="navbarBackground">
+    <div class="logo">
+      <div class="icon-hourglass"></div> 
+      <div class="text-hourglass">Hourglass</div>
+    </div>
+  </div>
   <div class="topImg"></div>
+
+
+
+
   <!-- Bootstrap Setups -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
