--- a/Dev/index.html
+++ b/Dev/index.html
@@ -30,6 +30,8 @@
       <div class="icon-hourglass"></div> 
       <div class="text-hourglass">Hourglass</div>
     </div>
+    <div class="tranglediv"></div>
+    <span id="text-alpha"> Alpha </span>
   </div>
   <div class="topImg"></div>
 
