--- a/Dev/index.html
+++ b/Dev/index.html
@@ -33,6 +33,25 @@
     <div class="tranglediv"></div>
     <span id="text-alpha"> Alpha </span>
   </div>
+
+  <div class="allinone">
+    <div class="text-allinone">All In One</div>
+    <div class="icon-todolist"></div>
+    <div class="text-icontext-allinone text-todolist">Todo List</div>
+    <div class="icon-taskplanning"></div>
+    <div class="text-icontext-allinone text-taskplanning">Task Planning</div>
+    <div class="icon-pomodoro"></div>
+    <div class="text-icontext-allinone text-pomodoro">Pomodoro</div>
+    <div class="icon-projectmanagement"></div>
+    <div class="text-icontext-allinone text-projectmanagement">Project Management</div>
+    <div class="icon-more"></div>
+    <div class="text-icontext-allinone text-more">More</div>
+    <div class="icon-timetracking"></div>
+    <div class="text-icontext-allinone text-timetracking">Time Tracking</div>
+    <div class="allinone-outside"></div>
+  </div>
+
+
   <div class="topImg"></div>
 
 
