Help Spread World Section + text added "if you like us ... spread to the world" + three social icon added

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -51,8 +51,17 @@
     <div class="allinone-outside"></div>
   </div>
 
-
   <div class="topImg"></div>
+
+  <div class="spreadWorld-section"> 
+    <div class="text-helpSpreadWorld">
+      If you like us, please help us spread to the world.</div>
+      <div class="spreadWorld-socialMediaIcon">
+        <div class="icon-facebook"></div>
+        <div class="icon-twitter"></div>
+        <div class="icon-googleplus"></div>
+      </div>
+  </div>
 
 
 
