Coming Soon Section
+ coming soon title
+ device icon set

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -63,6 +63,15 @@
       </div>
   </div>
 
+  <div class="comingSoon-section">
+    <div class="text-comingsoon">Coming Soon</div>
+    <div class="comingSoon-deviceIcon">
+      <div class="icon-computer"></div>
+      <div class="icon-phone"></div>
+      <div class="icon-tablet"></div>
+    </div>
+  </div>
+
 
 
 
