Email Subscription Section
+ email input filed
+ subscribe button
+ upper and lower border color

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -72,6 +72,15 @@
     </div>
   </div>
 
+  <div class="emailSubscription-section">
+    <div class="emailSubscription-inputForm">
+      <input type="text" class="form-control" placeholder="Email Address" aria-describedby="Email Subscription">
+    </div>
+    <div class="emailSubscription-button">
+      <button type="button" class="btn btn-primary btn-custom-subscribe">Subscribe News Letter</button>
+    </div>
+  </div>
+
 
 
 
