Add Subscription Later Message
+ add a subscription later description
+ add twitter and facebook icon

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -81,6 +81,16 @@
     </div>
   </div>
 
+  <div class="subscriptionError-section">
+    <div class="subscriptionError-description">
+      Right now, the app is in develope stage, the news letter server has not yet established. Please follow our twitter & facebook to get the newest develope news. We will setup the news letter server as soon as possible. 
+    </div>
+    <div class="subscriptionError-iconset">
+      <div class="icon-facebook"></div>
+      <div class="icon-twitter"></div>
+    </div>
+  </div>
+
 
 
 
