Add Some <a> tag to Links
+ all <a> link to google.com
+ all social media icon has <a> tags
+ twitter and facebook link with <a> tags

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -57,9 +57,9 @@
     <div class="text-helpSpreadWorld">
       If you like us, please help us spread to the world.</div>
       <div class="spreadWorld-socialMediaIcon">
-        <div class="icon-facebook"></div>
-        <div class="icon-twitter"></div>
-        <div class="icon-googleplus"></div>
+        <a href="http://www.google.com"><div class="icon-facebook"></div></a>
+        <a href="http://www.google.com"><div class="icon-twitter"></div></a>
+        <a href="http://www.google.com"><div class="icon-googleplus"></div></a>
       </div>
   </div>
 
@@ -83,11 +83,11 @@
 
   <div class="subscriptionError-section">
     <div class="subscriptionError-description">
-      Right now, the app is in develope stage, the news letter server has not yet established. Please follow our twitter & facebook to get the newest develope news. We will setup the news letter server as soon as possible. 
+      Right now, the app is in develope stage, the news letter server has not yet established. Please follow our <a href="http://www.google.com">twitter</a> & <a href="http://www.google.com">facebook</a> to get the newest develope news. We will setup the news letter server as soon as possible. 
     </div>
     <div class="subscriptionError-iconset">
-      <div class="icon-facebook"></div>
-      <div class="icon-twitter"></div>
+      <a href="http://www.google.com"><div class="icon-facebook"></div></a>
+      <a href="http://www.google.com"><div class="icon-twitter"></div></a>
     </div>
   </div>
 
