Change Background Image Order
+ move background img one layer lower
+ background img still on top of nav bar
+ all in one frame on the very top make it selectable

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -28,7 +28,8 @@
   <div class="navbarBackground">
     <div class="logo">
       <div class="icon-hourglass"></div> 
-      <div class="text-hourglass">Hourglass</div>
+      <a href="www.google.com">
+        <div class="text-hourglass">Hourglass</div></a>
     </div>
     <div class="tranglediv"></div>
     <span id="text-alpha"> Alpha </span>
